pom fix with lombok